--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage":"https://github.com/pankaj-gitcode/myPortfolio",
+  "homepage":"https://pankaj-gitcode.github.io/myPortfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
