--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage":"https://pankaj-gitcode.github.io/myPortfolio",
+  "homepage": "https://pankaj-gitcode.github.io/myPortfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +9,14 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@splinetool/react-spline": "^4.0.0",
     "@web3forms/react": "^1.1.3",
+    "axios": "^1.7.9",
     "form-data": "^4.0.2",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
